--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "buefy": "^0.7.3",
     "vue": "^2.6.6",
+    "vue-awesome": "^3.5.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
